--- a/source/_posts/2025-12-28-unity-dots-3.md
+++ b/source/_posts/2025-12-28-unity-dots-3.md
@@ -27,8 +27,8 @@ foreach (var (transform, speed) in
 }
 ```
 这种方式上手简单，但在实体数量较大时，并不是最优解。原因如下：
-* 1. 依然运行在主线程，无法利用多核优势
-* 2. 依旧是顺序执行，没有并行
+* 依然运行在主线程，无法利用多核优势
+* 依旧是顺序执行，没有并行
 
 
 ## 使用JobEntity来提高执行效率
