--- a/source/_posts/2025-12-28-unity-dots-2.md
+++ b/source/_posts/2025-12-28-unity-dots-2.md
@@ -31,7 +31,7 @@ https://github.com/Unity-Technologies/EntityComponentSystemSamples
 ## 3. 编写Entity和Component
 
 创建RotationSpeedAuthoring脚本，并挂载到Cube上：
-```java
+```csharp
 // 一个Authoring就是一个普通的MonoBehavior
 public class RotationSpeedAuthoring : MonoBehaviour
 {
@@ -60,7 +60,7 @@ public struct RotationSpeed : IComponentData
 ## 4. System逻辑
 
 创建RotationSystem，无需挂载到任何地方，DOTS会自动识别。
-```java
+```csharp
 public partial struct RotationSystem : ISystem
 {
     [BurstCompile]
