--- a/source/_posts/2025-12-28-unity-dots-3.md
+++ b/source/_posts/2025-12-28-unity-dots-3.md
@@ -18,7 +18,7 @@ Entities：1.4.3
 https://github.com/Unity-Technologies/EntityComponentSystemSamples
 
 在[上一篇](http://matchding.top/2025/12/28/2025-12-28-unity-dots-2/)中，我们在**RotationSystem**里通过**SystemAPI.Query + foreach**的方式遍历实体，实现旋转逻辑：
-```java
+```csharp
 foreach (var (transform, speed) in
          SystemAPI.Query<RefRW<LocalTransform>, RefRO<RotationSpeed>>())
 {
@@ -33,7 +33,7 @@ foreach (var (transform, speed) in
 
 ## 使用JobEntity来提高执行效率
 
-```c
+```csharp
 [BurstCompile]
 protected override void OnUpdate()
 {   
