--- a/source/_posts/2025-12-31-unity-dots-5.md
+++ b/source/_posts/2025-12-31-unity-dots-5.md
@@ -35,7 +35,7 @@ ECS世界和主场景中的物理是两套系统，互不干涉。
 如果想要两个世界交互，只能通过互传数据桥接的方式。
 例如：
 玩家控制的角色在主场景，而海量的敌人在ECS世界中。这种情况下，如果玩家角色要攻击敌人，比如发射子弹，通过射线检测来判断是否命中敌人。不能在MonoBehaviour中直接使用`Physics.RayCast()`方法，而是需要用ECS世界中的`PhysicsWorldSingleton`：
-```c#
+```csharp
 RaycastInput input = new RaycastInput
 {
     Start = ray.origin,
@@ -55,7 +55,7 @@ if (physicsWorld.CollisionWorld.CastRay(input, out RaycastHit hit))
 }
 ```
 Job中：
-```c#
+```csharp
 public void OnUpdate(ref SystemState state)
         {
             var ecb =
@@ -99,7 +99,7 @@ public partial struct BulletMoveJob : IJobEntity
 
 ## 其他形状检测
 同理，类似CastRay
-```c#
+```csharp
 PhysicsWorld.SphereCast();
 PhysicsWorld.SphereCastAll();
 PhysicsWorld.CapsuleCast();
